--- a/src/main/resources/data/jolcraft/loot_table/chests/dwarven_ruin_treasure.json
+++ b/src/main/resources/data/jolcraft/loot_table/chests/dwarven_ruin_treasure.json
@@ -27,8 +27,7 @@
         {
           "type": "minecraft:item",
           "name": "minecraft:lantern",
-          "weight": 2,
-          "functions": []
+          "weight": 2
         },
         {
           "type": "minecraft:item",
@@ -39,8 +38,36 @@
               "function": "minecraft:set_count",
               "count": 5
             }
-          ],
-          "conditions": []
+          ]
+        }
+      ]
+    },
+    {
+      "rolls": 2,
+      "entries": [
+        {
+          "type": "minecraft:loot_table",
+          "value": "jolcraft:chests/dwarven_tome_common",
+          "weight": 5
+        },
+        {
+          "type": "minecraft:loot_table",
+          "value": "jolcraft:chests/dwarven_tome_uncommon",
+          "weight": 4
+        },
+        {
+          "type": "minecraft:loot_table",
+          "value": "jolcraft:chests/dwarven_tome_rare",
+          "weight": 2
+        },
+        {
+          "type": "minecraft:loot_table",
+          "value": "jolcraft:chests/dwarven_tome_epic",
+          "weight": 1
+        },
+        {
+          "type": "minecraft:empty",
+          "weight": 5
         }
       ]
     }
