--- a/src/main/resources/data/jolcraft/loot_table/chests/dwarven_ruin_treasure.json
+++ b/src/main/resources/data/jolcraft/loot_table/chests/dwarven_ruin_treasure.json
@@ -7,13 +7,18 @@
         {
           "type": "minecraft:item",
           "name": "minecraft:paper",
-          "weight": 3,
+          "weight": 1,
           "functions": [
             {
               "function": "minecraft:set_count",
               "count": 13
             }
           ]
+        },
+        {
+          "type": "minecraft:loot_table",
+          "value": "jolcraft:chests/scrap",
+          "weight": 2
         },
         {
           "type": "minecraft:item",
@@ -27,7 +32,7 @@
         {
           "type": "minecraft:item",
           "name": "minecraft:lantern",
-          "weight": 2
+          "weight": 1
         },
         {
           "type": "minecraft:item",
@@ -47,27 +52,12 @@
       "entries": [
         {
           "type": "minecraft:loot_table",
-          "value": "jolcraft:chests/dwarven_tome_common",
-          "weight": 5
-        },
-        {
-          "type": "minecraft:loot_table",
-          "value": "jolcraft:chests/dwarven_tome_uncommon",
-          "weight": 4
-        },
-        {
-          "type": "minecraft:loot_table",
-          "value": "jolcraft:chests/dwarven_tome_rare",
-          "weight": 2
-        },
-        {
-          "type": "minecraft:loot_table",
-          "value": "jolcraft:chests/dwarven_tome_epic",
+          "value": "jolcraft:chests/dwarven_tome",
           "weight": 1
         },
         {
           "type": "minecraft:empty",
-          "weight": 5
+          "weight": 1
         }
       ]
     }
